2011-03-02  Donal K. Fellows  <dkf@users.sf.net>

	* doc/tk_mac.n (new file): Description of OSX-specific functionality
	in Tk, contributed by Kevin Walzer.
	* doc/button.n, doc/font.n, doc/menu.n: Noted which parts of these
	commands are intentionally not fully supported on OSX.

2011-01-24  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkSelect.c: Fix for [Bug #3164879] 
	(memory allocation bug introduced by [Patch #3129527])

2011-01-22  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkEntry.c(ttk::combobox): Add missing 
	'validate' command (reported by schelte).

2011-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgbox.tcl: [Patch #3154705] Close button has no effect

2011-01-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc
	* win/configure.in    typo
	* win/configure:      (autoconf-2.59)

2011-01-06   Kevin Walzer <wordtech@users.sourceforge.net>

	* macosx/README: 	Added info on textured background windows.
	* macosx/tkMacOSXFont.c: Fix for 2857300, improves rounding up on text width [submitted by treectrl]
	* macosx/tkMacOSXMenu.c:  Fix for radiobuttons and checkbuttons not displaying in popup menus, and disabled menu entries.
	*macosx/ tkMacOSXWindowEvent.c:  Fix for 3086887, speeds up scrolling; also textured background windows
	* macosx/tkMacOSXWm.c: Textured background windows.

2011-01-06  Stuart Cassoff  <stwo@users.sourceforge.net>

	* generic/tkEvent.c:	Cast some NULLs to (void *) in order to quash
	* unix/tkUnixEvent.c:	"missing sentinel in function call"
	* unix/tkUnixKey.c:	compiler warnings.
	* unix/tkUnixRFont.c:

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:	Clean up '.PHONY:' targets: Arrange those
				common to Tcl and Tk as in Tcl's Makefile.in,
				add any missing ones and remove duplicates.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.
